# mcu_debug

./: CMakeLists.txt  README.md  README.txt  flash.py  jtag-scan.cfg  lpc11uxx.cfg  lpc4337.cfg  lpc4337_m0.cfg  lpc4337_swd.cfg  lpc43xx.cfg
mcu_debug/: debug.py  flash.py
mcu_debug/config/: lpc4337_swd.cfg
mcu_debug/install/: 99-blackmagic-probe.rules  JTAG_lockpick.rules
openocd_tools/: README.txt  flash.py
openocd_tools/config/: lpc11uxx.cfg  lpc4337_jtag.cfg  lpc4337_swd.cfg
